[package]
name = "arma-rs"
description = "Arma 3 Extensions in Rust"
version = "1.10.5"
edition = "2021"
authors = ["Brett Mayson"]
repository = "https://github.com/brettmayson/arma-rs"
license = "MIT"
keywords = ["arma"]
readme = "../README.md"

[dependencies]
arma-rs-proc = { path = "../arma-rs-proc", version = "1.10.0" }
log = "0.4.20"
state = "0.6.0"
seq-macro = "0.3.5"

chrono = { version = "0.4.30", optional = true }
crossbeam-channel = { version = "0.5.8", optional = true }
libc = { version = "0.2.147", optional = true }
serde = { version = "1.0.188", features = ["derive"], optional = true }
serde_json = { version = "1.0.105", optional = true }
uuid = { version = "1.4.1", optional = true }

[target.'cfg(all(target_os="windows", target_arch="x86"))'.dependencies]
link_args = "0.6.0"

[features]
default = ["extension", "call-context"]
extension = ["libc", "crossbeam-channel"]
call-context = ["extension"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
]
