[package]
name = "arma-rs"
description = "Arma 3 Extensions in Rust"
version = "1.11.12"
edition = "2021"
authors = ["Brett Mayson"]
repository = "https://github.com/brettmayson/arma-rs"
license = "MIT"
keywords = ["arma"]
readme = "../README.md"

[dependencies]
arma-rs-proc = { path = "../arma-rs-proc", version = "1.11.1" }
log = "0.4.27"
state = "0.6.0"
seq-macro = "0.3.6"

chrono = { version = "0.4.40", optional = true }
crossbeam-channel = { version = "0.5.14", optional = true }
libc = { version = "0.2.171", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
uuid = { version = "1.16.0", optional = true }

[target.'cfg(all(target_os="windows", target_arch="x86"))'.dependencies]
link_args = "0.6.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["libloaderapi"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = ["Win32_Foundation", "Win32_System_Console"]

[dev-dependencies]
trybuild = "1.0.104"

[features]
default = ["extension"]
extension = ["libc", "crossbeam-channel"]
